# restapi/controllers/Default.js
@@ -4,7 +4,7 @@ var utils = require('../utils/writer.js');
 var Default = require('../service/DefaultService');
 
 module.exports.log = function log (req, res, next) {
-  var config = req.swagger.params['config'].value;
+  var config = req.swagger.params['payload'].value;
   Default.log(config)
     .then(function (response) {
       utils.writeJson(res, response);
